--- a/.github/workflows/lks-dev-pipeline.yaml
+++ b/.github/workflows/lks-dev-pipeline.yaml
@@ -88,7 +88,7 @@ jobs:
         run: |
           IMAGE_TAG=${{ github.sha }}
           IMAGE_URI=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker build -t $IMAGE_URI .
+          docker build -t $IMAGE_URI -f gatus/Dockerfile gatus
           docker tag $IMAGE_URI $ECR_REGISTRY/$ECR_REPOSITORY:latest
           docker push $IMAGE_URI
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
