--- a/.github/workflows/gatus.yaml
+++ b/.github/workflows/gatus.yaml
@@ -79,6 +79,11 @@ jobs:
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
           echo "IMAGE_FULL_URI=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
 
+      - name: Check if config.yaml exists in image
+        run: |
+          docker run --rm ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }} ls -la /config
+          docker run --rm ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }} cat /config/config.yaml
+
       - name: Update ECS task definition
         env:
           GATUS_TASK_DEFINITION: ${{ env.GATUS_TASK_DEFINITION }}
