feat: modify alert gatus

--- a/.github/workflows/gatus.yaml
+++ b/.github/workflows/gatus.yaml
@@ -2,7 +2,7 @@ name: File yml in Github Actions
 on:
   push:
     branches:
-      - dev
+      - main
     paths:
       - .github/workflows/gatus.yaml
       # - docker-stack.yml
