--- a/gatus/config/config.yaml
+++ b/gatus/config/config.yaml
@@ -1,23 +1,9 @@
-# FILL IN THE MISSING VALUES BELOW
 alerting:
   github:
     token: "<github-token>" # WARN: DO NOT CHANGE THIS LINE
     owner: project-sony
     repository: devops-jatim-25
-    issue:
-      labels: ["monitoring", "gatus"]
-      title: "⚠️ Alert - {{ENDPOINT}} is down"
-      description: |
-        Gatus detected an issue with {{ENDPOINT}}:
-        - Status: {{STATUS}}
-        - Condition: {{CONDITION}}
-        - Timestamp: {{TIMESTAMP}}
-      failure-threshold: 3
-      success-threshold: 5
-      send-on-resolved: true
-# FILL IN THE MISSING VALUES ABOVE
 
-# FILL IN THE MISSING VALUES BELOW
 endpoints:
   - name: Leantime
     url: <leantime-url> # WARN: DO NOT CHANGE THIS LINE
@@ -27,7 +13,15 @@ endpoints:
       - "[RESPONSE_TIME] < 300"
     alerts:
       - type: github
-        description: "Sensei, Leantime is down! Please check and fix it."
+        failure-threshold: 3
+        success-threshold: 5
+        send-on-resolved: true
+        title: "⚠️ Alert - Leantime is down"
+        description: |
+          Gatus detected an issue with Leantime:
+          - Status: {{STATUS}}
+          - Condition: {{CONDITION}}
+          - Timestamp: {{TIMESTAMP}}
 
   - name: Gatus
     url: <gatus-url> # WARN: DO NOT CHANGE THIS LINE
@@ -37,5 +31,12 @@ endpoints:
       - "[RESPONSE_TIME] < 500"
     alerts:
       - type: github
-        description: "Sensei, Gatus is down! Please check and fix it."
-# FILL IN THE MISSING VALUES BELOW
+        failure-threshold: 3
+        success-threshold: 5
+        send-on-resolved: true
+        title: "⚠️ Alert - Gatus is down"
+        description: |
+          Gatus detected an issue with Gatus:
+          - Status: {{STATUS}}
+          - Condition: {{CONDITION}}
+          - Timestamp: {{TIMESTAMP}}
