--- a/gatus/config/config.yaml
+++ b/gatus/config/config.yaml
@@ -1,24 +1,42 @@
-# FILL IN THE MISSING VALUES BELOW
 alerting:
-  ???:
+  github:
     token: "<github-token>" # WARN: DO NOT CHANGE THIS LINE
-# FILL IN THE MISSING VALUES ABOVE
+    owner: project-sony
+    repository: devops-jatim-25
 
-# FILL IN THE MISSING VALUES BELOW
 endpoints:
   - name: Leantime
     url: <leantime-url> # WARN: DO NOT CHANGE THIS LINE
-    interval:
+    interval: 30s
     conditions:
+      - "[STATUS] == 200"
+      - "[RESPONSE_TIME] < 300"
     alerts:
-      - type: ???
-        description: "Sensei, Leantime is down! Please check and fix it."
+      - type: github
+        failure-threshold: 3
+        success-threshold: 5
+        send-on-resolved: true
+        title: "⚠️ Alert - Leantime is down"
+        description: |
+          Gatus detected an issue with Leantime:
+          - Status: {{STATUS}}
+          - Condition: {{CONDITION}}
+          - Timestamp: {{TIMESTAMP}}
 
   - name: Gatus
     url: <gatus-url> # WARN: DO NOT CHANGE THIS LINE
-    interval:
+    interval: 1m
     conditions:
+      - "[STATUS] == 200"
+      - "[RESPONSE_TIME] < 500"
     alerts:
-      - type: ???
-        description: "Sensei, Gatus is down! Please check and fix it."
-# FILL IN THE MISSING VALUES BELOW
+      - type: github
+        failure-threshold: 3
+        success-threshold: 5
+        send-on-resolved: true
+        title: "⚠️ Alert - Gatus is down"
+        description: |
+          Gatus detected an issue with Gatus:
+          - Status: {{STATUS}}
+          - Condition: {{CONDITION}}
+          - Timestamp: {{TIMESTAMP}}
