--- a/.github/workflows/lks-deployment-pipeline.yml
+++ b/.github/workflows/lks-deployment-pipeline.yml
@@ -20,7 +20,7 @@ env:
   # Leantime configuration
   ECS_LEANTIME_SERVICE: ${{ secrets.ECS_LEANTIME_SERVICE }}
   LEANTIME_TASK_DEFINITION: "leantime/task-definition.json"
-  LEANTIME_URL: "http://${{ secrets.ALB_ENDPOINT }}:8000"
+  LEANTIME_URL: "http://${{ secrets.ALB_ENDPOINT }}"
 
   # Gatus configuration
   GATUS_CONFIG_FILE: "gatus/config/config.yaml"
@@ -32,28 +32,28 @@ permissions:
   contents: read
 
 jobs:
-  # deploy-leantime:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  deploy-leantime:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v4
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-  #         aws-region: ${{ env.AWS_REGION }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: ${{ env.AWS_REGION }}
 
-  #     - name: Deploy Amazon ECS task definition
-  #       uses: aws-actions/amazon-ecs-deploy-task-definition@v2
-  #       with:
-  #         task-definition: ${{ env.LEANTIME_TASK_DEFINITION }}
-  #         service: ${{ env.ECS_LEANTIME_SERVICE }}
-  #         cluster: ${{ env.ECS_CLUSTER }}
-  #         wait-for-service-stability: true
-  #         run-task-tags: '[{"key": "name", "value": "lks-container-leantime"} ]'
+      - name: Deploy Amazon ECS task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v2
+        with:
+          task-definition: ${{ env.LEANTIME_TASK_DEFINITION }}
+          service: ${{ env.ECS_LEANTIME_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
+          run-task-tags: '[{"key": "name", "value": "lks-container-leantime"} ]'
 
 # -----
   deploy-gatus:
