--- a/gatus/config/config.yaml
+++ b/gatus/config/config.yaml
@@ -1,4 +1,3 @@
-
 alerting:
   github:
     repository-url: "https://github.com/muhammadmufadholafif-stack/devops.git"
@@ -6,7 +5,7 @@ alerting:
 
 endpoints:
   - name: Leantime
-    url: <leantime-url>   
+    url: "http://leantime-app"     
     interval: 30s
     conditions:
       - "[STATUS] == 200"
@@ -19,7 +18,7 @@ endpoints:
         description: "Sensei, Gatus is down! Please check and fix it."
 
   - name: Gatus
-    url: <gatus-url>     
+    url: "http://localhost:8080"   
     interval: 60s
     conditions:
       - "[STATUS] == 200"
