--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,7 +18,7 @@ env:
   LEANTIME_TASK_DEFINITION: "leantime/task-definition.json"
   LEANTIME_URL: "${{ secrets.ALB_ENDPOINT }}/auth/login"
   GATUS_URL: "${{ secrets.ALB_ENDPOINT }}:8080"
-  ecs_gatus_service: "gatus-service"
+  ecs_gatus_service: "gatus-servicee"
   gatus_task_definition: "gatus/task-definition.json"
 
 
